--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,6 +7,7 @@ RUN npm ci
 RUN npm install -g @angular/cli@14.2.10
 COPY . .
 
+RUN set NODE_OPTIONS=--max_old_space_size=8196
 # RUN npm run build:ssr
 RUN ng build --configuration production --base-href /fio --deploy-url /fio/ --output-path=fio
 
